[package]
name = "scraper-extism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.1.0"
scraper = { git = "https://github.com/bradyjoslin/scraper.git", branch = "master" }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0"